<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/main" />
        <item
            android:id="@+id/enginer"
            android:title="@string/injiner" />
        <item
            android:id="@+id/new_equip"
            android:title="@string/aparatlar_1" />
        <item
            android:id="@+id/old_equip"
            android:title="@string/aparatlar_2" />
        <item
            android:id="@+id/location"
            android:title="@string/joylashuv" />
        <item
            android:id="@+id/nav_personal_account"
            android:title="@string/my_account" />
    </group>
</menu>