<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/card_profile_avater"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/enginer_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:lines="2"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category_of_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/enginer"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/card_profile_avater"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

        <TextView
            android:id="@+id/tv_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/expirence"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/card_profile_avater"
            app:layout_constraintTop_toBottomOf="@id/tv_category_of_doctor" />

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/tv_experience"
            app:layout_constraintTop_toBottomOf="@id/tv_category_of_doctor" />


        <View
            android:id="@+id/v_divider"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comments"
            android:layout_height="1dp"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/tv_clinic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/clinic_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider" />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/enginer_detail"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_clinic_name" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>